[package]
name = "qwiz"
description = "Qwiz (Qinpel Wizard) is a command program that features all the functionalities to download, build, install and execute multiple dynamic systems on the Qinpel architecture for the Power Intelligence platform."
repository = "https://github.com/emuvi/qwiz"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.0"
edition = "2021"

[dependencies]
